# morrow

./: README.md
apps/backend/: .gitignore  Cargo.toml  Dockerfile  GRAPHQL_API.md  README.md
apps/backend/.devcontainer/: compose.yml  devcontainer.json
apps/backend/migration/: Cargo.toml
apps/backend/migration/src/: columns.rs  lib.rs  m20250505_051849_create_users.rs  m20250506_100520_create_cognito_users.rs  m20250506_100520_create_identity_links.rs  m20250506_100520_create_oauth_users.rs  m20250524_000000_create_updated_at_trigger.rs  m20250601_000000_add_user_role.rs  main.rs
apps/backend/src/: main.rs
apps/backend/src/application/: mod.rs
apps/backend/src/application/dtos/: auth_dto.rs  authentication_dto.rs  cognito_user_dto.rs  identity_link_dto.rs  mod.rs  user_dto.rs
apps/backend/src/application/errors/: mod.rs
apps/backend/src/application/services/: auth_service.rs  authentication_service.rs  authorization_service.rs  cognito_user_service.rs  mod.rs  user_service.rs
apps/backend/src/application/usecases/: authenticate_user.rs  mod.rs  sign_in.rs  sign_out.rs  sign_up.rs
apps/backend/src/domain/: mod.rs
apps/backend/src/domain/entities/: auth.rs  cognito_user.rs  identity_link.rs  mod.rs  (+3 more)
apps/backend/src/infrastructure/: mod.rs
apps/backend/src/presentation/: mod.rs
apps/backend/tests/: application_test.rs  authorization_test.rs  graphql_integration_test.rs  graphql_schema_test.rs  mod.rs
apps/backend/tests/integration/: graphql_schema_test.rs  mod.rs
apps/backend/tests/presentation/: authentication_mutation_test.rs  mod.rs
(+84 files in other folders)
