[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = "0.6.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
async-graphql = "7.0.16"
async-graphql-axum = "7.0.16"
thiserror = "2.0.12"
# sea-orm = { version = "1.1.10", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
sea-orm = { version = "1.1.10", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
