[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "migration",
]

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = "0.6.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
async-graphql = { version = "7.0.16", features = ["chrono"] }
async-graphql-axum = "7.0.16"
thiserror = "2.0.12"
# sea-orm = { version = "1.1.10", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
sea-orm = { version = "1.1.10", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
chrono = "0.4.41"
anyhow = "1.0.98"
dotenvy = "0.15.7"
